# meme-rf-learner

./: .gitignore  README.md  TODO.md  implementation_plan.md  pyproject.toml
data/sounds/: sounds.json
scripts/: create_test_video.py  download_templates.py  scrape_sounds.py  test_meme.py  test_webcam.py  train_interactive.py  train_rl.py
src/: __init__.py
src/data/: __init__.py  drive_loader.py  sound_manager.py  template_manager.py
src/meme/: __init__.py  composer.py  player.py
src/pipeline/: __init__.py  orchestrator.py
src/rl/: __init__.py  agent.py  environment.py
src/scrapers/: __init__.py  download_manager.py  sound_scraper.py
src/vision/: __init__.py  emotion_analyzer.py  reward_calculator.py  webcam_capture.py
